--- a/primitives/evm/Cargo.toml
+++ b/primitives/evm/Cargo.toml
@@ -13,7 +13,7 @@ documentation = "https://docs.rs/sp-evm"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-evm = { git = "https://github.com/rust-blockchain/evm", branch = "polkadot-v0.9.22", default-features = false, features = ["with-codec"] }
+evm = { git = "https://github.com/rust-blockchain/evm", branch = "master", default-features = false, features = ["with-codec"] }
 serde = { version = "1.0.137", features = ["derive"], optional = true }
 
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
